# python-project-lvl3

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
pageloader/: __init__.py  cli.py  helpers.py  loader.py  parsers.py  saver.py  storage.py  url.py
pageloader/scripts/: pageloader.py
tests/: conftest.py  test_helpers.py  test_loader.py  test_pageloader.py  test_parsers.py  test_url.py
